[project]
name = "code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.43.0",
    "google-genai>=0.4.0",
    "openai>=1.59.6",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]

[tool.setuptools]
py-modules = ["main", "test_main"]

[project.scripts]
main = "main:main"
